Adding initial REST controllers
Added Podcast and Episode REST controllers and integration
tests covering the endpoints. Also removed the Spring security for now.

This also includes some project setup files for eclipse and the mvnw runner
to run the maven builds more easily.